[trivia] Replace new Integer calls with Integer.valueOf because the former is deprecated.